test/1.2/errors/T_EAPPLY.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

extern FOO;

// methods can only be used in call expressions if they don't throw, and have
// less than two outputs
method throwing {
}
method multi_out() -> (int x, int y) nothrow {
}

event e;

method test -> (bool ok)
{
    /// ERROR EAPPLY
    FOO();
    /// ERROR EAPPLY
    (FOO + 1)();
    local bool b;
    /// ERROR EAPPLY
    b();
    /// ERROR EAPPLY
    $throwing() + 1;
    /// ERROR EAPPLY
    $multi_out() + 1;
    /// ERROR EAPPLY
    1();
    /// ERROR EAPPLY
    $e();
    /// ERROR EAPPLY
    $e() + 1;
}
